added main controllers
