# app/controllers/place.controller.js
@@ -15,7 +15,8 @@ exports.getAll = (req, res) => {
 exports.getById = (req, res) => {
   prisma.place
     .findUnique({
-      where: { id: req.params.id },
+      where: { id: parseInt(req.params.id) },
+      include: { activities: true },
     })
     .then((place) => {
       res.status(200).send(place);
@@ -44,23 +45,40 @@ exports.getByName = (req, res) => {
 };
 
 exports.create = (req, res) => {
-  prisma.place
+  prisma.address
     .create({
       data: {
-        name: req.body.name,
-        description: req.body.description,
-        address: req.body.address,
-        website: req.body.website,
-        phone: req.body.phone,
-        email: req.body.email,
-        placeTypeId: req.body.placeTypeId,
-        //ownerId retrieved from jwt in header
-        owner: { connect: { id: req.userId } },
+        street: req.body.street,
+        streetNumber: req.body.streetNumber,
+        city: req.body.city,
+        postalCode: req.body.postalCode,
+        country: req.body.country,
+        region: req.body.region,
       },
     })
-    .then((place) => {
-      console.log("created");
-      res.status(200).send(place);
+    .then((address) => {
+      prisma.place
+        .create({
+          data: {
+            name: req.body.name,
+            description: req.body.description,
+            address: { connect: { id: address.id } },
+            website: req.body.website,
+            phone: req.body.phone,
+            email: req.body.email,
+            type: { connect: { id: req.body.placeTypeId } },
+            owner: { connect: { id: req.userId } },
+          },
+        })
+        .then((place) => {
+          console.log("created");
+          res.status(200).send(place);
+        })
+        .catch((err) => {
+          prisma.address.delete({ where: { id: address.id } });
+          console.log(err);
+          res.status(500).send(err);
+        });
     })
     .catch((err) => {
       console.log(err);
@@ -116,3 +134,43 @@ exports.delete = async (req, res) => {
     });
   }
 };
+
+exports.createActivity = async (req, res) => {
+  targetPlace = await prisma.place.findUnique({ where: { id: req.params.id } });
+  if (targetPlace.ownerId != req.userId) {
+    res.status(403).send({
+      message: "You are not authorized to perform this action!",
+    });
+    return;
+  }
+  prisma.activity
+    .create({
+      data: {
+        name: req.body.name,
+        description: req.body.description,
+        price: req.body.price,
+        place: { connect: { id: req.params.id } },
+        //TODO: add medias, dates, etc.
+      },
+    })
+    .then((activity) => {
+      res.status(200).send(activity);
+    })
+    .catch((err) => {
+      console.log(err);
+      res.status(500).send(err);
+    });
+};
+
+exports.getActivities = async (req, res) => {
+  prisma.activity
+    .findMany({ where: { placeId: req.params.id } })
+    .then((activities) => {
+      res.status(200).send(activities);
+    })
+    .catch((err) => {
+      res.status(500).send(err);
+    });
+};
+
+//TODO: myPlaces
